# pinocchio-stake

./: README.md
client/: package.json
client/idl/: solana_pinocchio_starter.json
program/: Cargo.toml
program/src/: consts.rs  entrypoint.rs  error.rs  lib.rs
program/src/helpers/: mod.rs  split.rs  sysvar.rs  sysvar_interface_stake_history.rs  sysvar_stake_history.rs
program/src/instruction/: authorized_checked.rs  mod.rs  redelegate.rs  split.rs
program/src/state/: authorized.rs  delegation.rs  lockup.rs  meta.rs  mod.rs  my_state.rs  redelegate_state.rs  stake.rs  stake_authorize.rs  stake_flags.rs  stake_history.rs  stake_history_sysvar.rs  stake_state_v2.rs  state.rs  utils.rs
